# papis-ask

./: .gitignore  README.md  flake.nix  pyproject.toml
contrib/: editor-author-list.py  fix-months.sh  ocrpdf.sh
nix/pkgs/fhaviary/: default.nix
nix/pkgs/fhlmi/: default.nix
nix/pkgs/paper-qa/: default.nix
nix/pkgs/paper-qa-pypdf/: default.nix
nix/pkgs/tantivy/: default.nix
papis_ask/: __init__.py  config.py  main.py  metadata_provider.py  output.py
